<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CU Bus Guide</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="favorites">Favorites</string>
    <string name="show_on_map">Show On Map</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="search_hint">Search stops/places</string>
    <string name="loading_stops">Loading stops...</string>
    <string name="display_stop">DisplayStop</string>
    <string name="loading_departures">Loading Departures...</string>
    <string name="WidgetHeader">Loading Departures...</string>
    <string name="Previous">Previous</string>
    <string name="Next">Next</string>

    <!-- Preference Strings -->
    <string name="ui">UI</string>
    <string name="pref_ui_category_slide_up_default_height_title">Fully Expand Slide-up
        Pane</string>
    <string name="pref_ui_category_slide_up_default_height_summary">When you click a
        stop/place, expand the Slide-up Pane fully.</string>

    <string-array name="Arrive_Depart">
        <item>Depart at</item>
        <item>Arrive by</item>
    </string-array>
    <string-array name="plan_for_least">
        <item>Time</item>
        <item>Walking</item>
        <item>Transfers</item>
    </string-array>
    <string-array name="walk_distance">
        <item>1/4 mile</item>
        <item>1/2 mile</item>
        <item>3/4 mile</item>
        <item>1 mile</item>
    </string-array>
    <string-array name="donate_amounts">
        <item>$1.00</item>
        <item>$2.00</item>
        <item>$5.00</item>
        <item>$10.00</item>
    </string-array>
    <string-array name="donate_product_ids">
        <item>donate_one_dollar</item>
        <item>donate_two_dollars</item>
        <item>donate_5_dollars</item>
        <item>donation_10_dollars</item>
    </string-array>

    <string name="mylocationprovider_read_permission_label">Read permission for the MyLocationContentProvider</string>
    <string name="mylocationprovider_read_permission_desc">Allows reading of the stops/places data from CU Bus Guide.</string>
    <string name="mylocationprovider_write_permission_label">Write permission for the MyLocationContentProvider</string>
    <string name="mylocationprovider_write_permission_desc">Allows writing to stops/places data from CU Bus Guide.</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_app">About CU Bus Guide</string>
    <string name="navigation">Navigation</string>
    <string name="home_screen_enabled_title">Home Screen Enabled</string>
    <string name="home_screen_enabled_summary">When enabled, pressing the Back button goes to the
        home screen before quitting the app.</string>
    <string name="home_screen">Home Screen</string>
    <string name="map">Map</string>
    <string name="pref_ui_map_hide_nav_drawer_icon_title">Hide Nav Drawer Icon</string>
    <string name="pref_ui_map_hide_nav_drawer_icon_summary">I am comfortable with swiping to
        open the Navigation Drawer on the Map, so hide that icon!</string>
    <string name="data_storage">Data Storage</string>
    <string name="place_cache">Places Cache</string>
    <string name="place_cache_summary">CU Bus Guide keeps recently searched Google Places in a
        database so you can view them on the map.</string>
    <string name="max_cache_size">Max Cache Size</string>
    <string name="max_place_cache_size_summary">Maximum number of cached Google Places.</string>
    <string name="copyright">\u00A9 2014</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="disclaimer_cumtd">CUMTD data provided by CUMTD.</string>
    <string name="places_data">Places data</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="send_feedback_summary">Your donations and feedback help make CU Bus
        Guide better!</string>
    <string name="title_activity_display_text_file">DisplayTextFileActivity</string>
    <string name="donate">Donate</string>
    <string name="join_gplus_community">Join G+ Community</string>
    <string name="beta_testing_description">Love the app? Want to see what\'s next?
        Be the first to get and test new features.
        \nTo become a beta tester, you need to:
        \n1) Join our G+ community and
        \n2) Become a beta tester.</string>
    <string name="become_a_beta_tester">Become a Beta Tester</string>

</resources>